[package]
name = "http_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0", features = ["json", "blocking"] }
futures-util = "0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.79"
error-chain = "0.12.4"
# openssl = { version = "0.10.63", features = ["vendored"] }
